--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creativemoodboard",
+  "name": "creative-mood-board",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,8 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.12.2",
     "@astrojs/check": "^0.8.2",
+    "@astrojs/svelte": "^5.7.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@supabase/supabase-js": "^2.44.4",
+    "astro": "^4.12.2",
+    "bits-ui": "^0.21.12",
+    "clsx": "^2.1.1",
+    "svelte": "^4.2.18",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
